--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+.logo{
+    
+    width: 60px;
+    margin: 10px;
+}
+
+.navbar{
+    padding: 0;
+    
+}
 .ingredients{
   position:absolute;
   height:350px;
@@ -16,7 +26,7 @@ margin: auto;
   position:absolute;
   height:350px;
   width:350px;
-  z-index: -1;
+  z-index: 1;
     top: 0;
 left: 0;
 right: 0;
@@ -24,8 +34,7 @@ margin: auto;
 }
 .clearfix{
     
-margin: 20%;
-    display: block;
+margin: 5%;
 }
 
 .carousel-item{
