--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,16 @@
     margin: 10px;
 }
 
+.especialidadesTitle{
+    background-color: red;
+    color: white;
+    text-align: center;
+    border: 10px solid red;
+    width: 100%;
+    height: 100px;  
+    
+}
+
 .navbar{
     padding: 0;
     
@@ -37,11 +47,7 @@ margin: auto;
 margin: 5%;
 }
 
-.carousel-item{
-    
-    min-height:580px;
 
-}
 
 
 .icon-bar {
