--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@
     width: 60px;
     margin: 10px;
 }
+.navbar-brand {
+    display: inline-block;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 100%;
+    line-height: inherit;
+    white-space: nowrap;
+}
 
 .especialidadesTitle{
     background-color: red;
@@ -48,7 +57,10 @@ margin: 5%;
 }
 
 
-
+.carousel-item {
+    height: 50%;
+    min-height: 100px;
+}
 
 .icon-bar {
   position: fixed;
